--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "html-pdf": "^3.0.1",
-    "pdf-creator-node": "^2.3.5",
+    "pdfkit": "^0.15.0",
     "sib-api-v3-sdk": "^8.5.0"
   }
 }
